// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly workspace is opened 1`] = `
<div>
  <div
    class="flex flex-col h-full search-notes"
    style="overflow-y: auto;"
  >
    <div
      class="b-item-container font-semibold text-sm uppercase px-2 mt-2"
    >
      🔍 Search notes
    </div>
    <div
      class="b-item-container px-2 mt-2"
    >
      <div
        class="bangle-input-container"
      >
        <input
          aria-label="Search"
          autocapitalize="off"
          autocorrect="off"
          class="bangle-input "
          placeholder="Search"
          type="text"
          value=""
        />
        <div
          style="position: relative; display: flex;"
        />
      </div>
    </div>
    <div
      class="b-item-container flex flex-row justify-between px-2 my-1 text-xs"
    />
    <div
      class="flex-grow"
      style="overflow-y: auto;"
    />
  </div>
</div>
`;

exports[`show search results 1`] = `
<div>
  <div
    class="flex flex-col h-full search-notes"
    style="overflow-y: auto;"
  >
    <div
      class="b-item-container font-semibold text-sm uppercase px-2 mt-2"
    >
      🔍 Search notes
    </div>
    <div
      class="b-item-container px-2 mt-2"
    >
      <div
        class="bangle-input-container"
      >
        <input
          aria-label="Search"
          autocapitalize="off"
          autocorrect="off"
          class="bangle-input "
          placeholder="Search"
          type="text"
          value=""
        />
        <div
          style="position: relative; display: flex;"
        />
      </div>
    </div>
    <div
      class="b-item-container flex flex-row justify-between px-2 my-1 text-xs"
    >
      <span
        class=""
      >
        Found 1 notes
      </span>
      <button
        class="focus:outline-none"
        data-bangle-editor-break="true"
        data-bangle-editor-pos="bottom"
        type="button"
      >
        Collapse all
      </button>
    </div>
    <div
      class="flex-grow"
      style="overflow-y: auto;"
    >
      <div
        class="b-sidebar-row2 hover search-result-note-match pl-1 pr-3  select-none"
        data-id="search-notes-result-0"
        style="cursor: pointer; display: flex; justify-content: space-between; user-select: none;"
      >
        <div
          class="flex flex-row"
        >
          <div
            class="b-left-node"
          >
            <button
              class="focus:outline-none"
              data-bangle-editor-break="true"
              data-bangle-editor-pos="bottom"
              type="button"
            >
              <svg
                class="fill-current  "
                style="height: 16px; width: 16px;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.343 7.757L4.93 9.172 12 16.242l7.071-7.07-1.414-1.415L12 13.414 6.343 7.757z"
                />
              </svg>
            </button>
          </div>
          <span>
            <span
              class="b-title text-sm font-bold"
            >
              one.md
            </span>
            
          </span>
        </div>
        <div
          class="flex flex-row"
        >
          <span
            class="b-right-node"
          >
            <button
              class="focus:outline-none text-xs font-semibold"
              data-bangle-editor-break="true"
              data-bangle-editor-pos="bottom"
              type="button"
            >
              1
            </button>
          </span>
          <span
            class="b-right-hover-node"
          >
            <button
              class="focus:outline-none text-xs font-semibold"
              data-bangle-editor-break="true"
              data-bangle-editor-pos="bottom"
              type="button"
            >
              1
            </button>
          </span>
        </div>
      </div>
      <span>
        <div
          class="b-sidebar-row2 hover search-result-text-match ml-1 pl-3 rounded-sm mt-3"
          data-id="search-result-text-match-0"
          style="cursor: pointer; display: flex; justify-content: space-between; user-select: none;"
        >
          <div
            class="flex flex-row"
          >
            <div
              class="b-left-node"
            />
            <span>
              <span
                class="b-title text-sm "
              >
                <div
                  class="highlight-text-container"
                >
                  <span
                    class="highlight-text text-sm"
                  >
                    hello
                  </span>
                  <span
                    class="highlight-text text-sm"
                  >
                     world
                  </span>
                </div>
              </span>
            </span>
          </div>
          <div
            class="flex flex-row"
          >
            <span
              class="b-right-node"
            />
            <span
              class="b-right-hover-node"
            />
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;
